# search

./: .gitignore  .gitmodules  .mpb  .sqlfluff  Dockerfile  Jenkinsfile  Makefile  README.md  ci-pod.yaml  docker-compose.yaml  eda.ipynb  package-lock.json  package.json  pyproject.toml  webpack.config.js
.run/: run-albatross-locally.run.xml  run-all-tests.run.xml
devops/: release.sh
devops/albatross/terraform/environments/: system-albatross.tfvars
devops/albatross/terraform/stages/10-main/: globals.tf  main.tf  outputs.tf  providers.tf  variables.tf
devops/albatross/terraform/stages/5-network/: main.tf  outputs.tf  providers.tf  variables.tf
devops/mpb/override/: format-python  lint-python  test
devops/mpb/override/build-scripts/: python
sql/: get_raw_model_database.sql
src/: app.py
src/albatross/: controller.py  photographer_classifier.py  utils.py
src/albatross/config/: __init__.py  classifier.py  exif.py  llm.py  service.py
src/albatross/enums/: enums.py
src/albatross/models/: __init__.py  camera.py  exif_collections.py  image_exif.py  lens.py  metrics.py  photographer_classification.py  recommendations.py  results.py  search.py
src/albatross/repository/: base_repository.py
src/albatross/serializers/: camera.py  exif_collections.py  lens.py  metrics.py  recommendations.py  results.py
src/albatross/services/: camera.py  image_exif.py  lens.py  metrics.py  recommendation.py
src/albatross/services/llm/: base_llm.py  gemini.py
src/albatross/services/search/: query.py
src/api/: __init__.py
src/bootstrap/: __init__.py  bootstrap.py
src/config/: settings.py
src/core/: __init__.py  dataset.py  engine.py  pipeline.py  transformers.py  transforms.py
src/search/: bootstrap.py  config.py  dataset.py  engine.py  matchers.py  pipeline.py  transforms.py
src/search/config/: __init__.py  config.py
src/search/enums/: enums.py
src/search/services/: search_service.py
src/services/: __init__.py  bq_helper.py  search_service.py
src/static/: openapi.yaml  package.json
src/static/css/: style.css  styles.css
src/static/js/: index.js  suggest.js
src/templates/: error.html  index.html  results.html  swagger-ui.html
src/templates/fragments/: challenge.html  classification.html  footer.html  header.html  how-can-you-improve.html  how-you-shoot.html  modal.html  mpb-logo.html  recommendations-json-tree.html  recommendations-table.html  sidebar.html  thanks.html  what-could-make-your-kit-better.html  your-current-gear.html
src/templates/macros/: _gear_macros.html
templates/: index.html
tests/: conftest.py
tests/fixtures/: __init__.py  camera.py  client.py  database.py  exif_data.py  image_exif.py  lens.py  llm.py  metrics.py  recommendations.py  results.py  search.py
tests/integration/: test_endpoints.py
tests/unit/: test_app.py  test_controller.py  test_photographer_classifier.py  test_recommendations.py  test_utils.py  test_views.py
tests/unit/llm/service/: test_base_llm.py  test_gemini.py
tests/unit/models/: test_camera_model.py  test_exif_collections.py  test_exif_model.py  test_lens_model.py  test_metrics_model.py  test_results_model.py  test_search_model.py
tests/unit/repository/: test_base_repository.py
tests/unit/search/: test_query.py
tests/unit/serializers/: test_camera_serializer.py  test_image_exif_serializer.py  test_lens_serializer.py  test_metrics_serializer.py  test_recommendations_serializer.py  test_results_serializer.py
tests/unit/services/: test_camera_service.py  test_image_exif_service.py  test_lens_service.py  test_metrics_service.py  test_recommendations_service.py  test_results_service.py
