[project]
name = "search"
version = "0.1.0"
description = "Search endpoint for Cameras and Lenses"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.11.0",
    "flask>=3.1.1",
    "flask-cors>=4.0.0",
    "google-cloud-bigquery-storage>=2.32.0",
    "google-cloud-bigquery>=3.34.0",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "rapidfuzz>=3.13.0",
    "sentence-transformers>=4.1.0",
    "pyarrow>=20.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
    "search",
    "sqlfluff>=3.4.0",
]

[tool.uv.sources]
search = { workspace = true }
